[package]
name = "mergesort"
version = "0.1.0"
authors = ["Pinglei Guo <at15@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_mergesort"
harness = false